Move images to the images/ folder

--- a/presentations/aula01/index.html
+++ b/presentations/aula01/index.html
@@ -135,7 +135,7 @@
 
         <section data-auto-animate>
             <h2 style='display: flex; align-items: center;'>
-                O que é &nbsp;<img src='python-logo-generic.svg' alt='Python' />?
+                O que é &nbsp;<img src='images/python-logo-generic.svg' alt='Python' />?
             </h2>
         </section>
 
@@ -143,22 +143,22 @@
 
         <section data-auto-animate>
             <h2 style='display: flex; align-items: center;'>
-                O que é &nbsp;<img src='python-logo-generic.svg' alt='Python' />?
+                O que é &nbsp;<img src='images/python-logo-generic.svg' alt='Python' />?
             </h2>
 
             <span>É uma linguagem de programação</span><span class='fragment' data-fragment-index="1">, multiplataforma...</span>
             <br/>
             <div class='r-stack'>
                 <div class='fragment fade-out' data-fragment-index="1">
-                    <img data-src='programming-language.svg' />
+                    <img data-src='images/programming-language.svg' />
                 </div>
                 <div class='fragment fade-in-then-out' data-fragment-index="1">
                     <div
                          style="display: flex; height: 10ex; justify-content: center;"
                     >
-                        <img style='flex: none' data-src="Tux.svg" />
-                        <img style='flex: none; margin-left: 1ex' data-src="apple.png" />
-                        <img style='flex: none; margin-left: 1ex' data-src="windows.png" />
+                        <img style='flex: none' data-src="images/Tux.svg" />
+                        <img style='flex: none; margin-left: 1ex' data-src="images/apple.png" />
+                        <img style='flex: none; margin-left: 1ex' data-src="images/windows.png" />
                     </div>
                 </div>
             </div>
@@ -168,44 +168,44 @@
 
         <section data-auto-animate>
             <h2 style='display: flex; align-items: center;'>
-                O que é &nbsp;<img src='python-logo-generic.svg' alt='Python' />?
+                O que é &nbsp;<img src='images/python-logo-generic.svg' alt='Python' />?
             </h2>
 
             <div>... e com amplo domínio de aplicação:</div>
             <div class="r-stack">
                 <div class="fragment fade-in-then-out">
                     <div class='local-grid'>
-                        <img data-src='django-logo-positive.svg' style='height: 1.5em' />
-                        <img data-src='flask.png' style='height: 3em' />
-                        <img data-src='tornado.png' style='height: 1.6em' />
+                        <img data-src='images/django-logo-positive.svg' style='height: 1.5em' />
+                        <img data-src='images/flask.png' style='height: 3em' />
+                        <img data-src='images/tornado.png' style='height: 1.6em' />
                     </div>
                     Desenvolvimento Web
                 </div>
                 <div class="fragment fade-in-then-out">
                     <div class='local-grid'>
-                        <img data-src='pygobject.svg' alt='PyGObject' style='height: 1.5em' />
-                        <img data-src='WxPython-logo.png' alt='wxPython' style='height: 2.5em; border: .2ex solid #484848; filter: saturate(.6);' />
-                        <img data-src='Python_and_Qt.svg.png' alt='PyQt' style='height: 2em' />
+                        <img data-src='images/pygobject.svg' alt='PyGObject' style='height: 1.5em' />
+                        <img data-src='images/WxPython-logo.png' alt='wxPython' style='height: 2.5em; border: .2ex solid #484848; filter: saturate(.6);' />
+                        <img data-src='images/Python_and_Qt.svg.png' alt='PyQt' style='height: 2em' />
                     </div>
                     Desenvolvimento Desktop
                 </div>
                 <div class="fragment fade-in-then-out">
                     <div class='local-grid' style='margin-bottom: 0;'>
-                        <img data-src='Scikit_learn_logo_small.svg' alt='Scikit-learn' style='height: 1.8em' />
-                        <img data-src='PyTorch_logo_black.svg' alt='PyTorch' style='height: 1.4em' />
-                        <img data-src='Tensorflow_logo.svg' alt='Tensorflow' style='height: 1.6em' />
+                        <img data-src='images/Scikit_learn_logo_small.svg' alt='Scikit-learn' style='height: 1.8em' />
+                        <img data-src='images/PyTorch_logo_black.svg' alt='PyTorch' style='height: 1.4em' />
+                        <img data-src='images/Tensorflow_logo.svg' alt='Tensorflow' style='height: 1.6em' />
                     </div>
                     <div class='local-grid' style='margin-top: 0;'>
-                        <img data-src='Pandas-logo.svg' alt='Pandas' style='height: 2em' />
-                        <img data-src='Matplotlib_logo.svg' alt='Matplotlib' style='height: 1em' />
-                        <img data-src='NumPy_logo_2020.svg' alt='NumPy' style='height: 2em' />
+                        <img data-src='images/Pandas-logo.svg' alt='Pandas' style='height: 2em' />
+                        <img data-src='images/Matplotlib_logo.svg' alt='Matplotlib' style='height: 1em' />
+                        <img data-src='images/NumPy_logo_2020.svg' alt='NumPy' style='height: 2em' />
                     </div>
                     Data Science
                 </div>
                 <div class="fragment fade-in">
                     <div class='local-grid'>
                         <div style='display: flex; align-items: center'>
-                            <img data-src='ArcGIS-Pro.png' alt='PyGObject' style='height: 1.8em' /><span style='font-size: .8em; margin-left: 1ex;'>ArcGIS Pro</span>
+                            <img data-src='images/ArcGIS-Pro.png' alt='PyGObject' style='height: 1.8em' /><span style='font-size: .8em; margin-left: 1ex;'>ArcGIS Pro</span>
                         </div>
                     </div>
                     Extensões e Plugins para aplicações
@@ -235,11 +235,11 @@
             <div style='display: flex; justify-content: center;'>
                 <div style='flex: none'>
                     <img
-                        src='stickman-worship.png'
+                        src='images/stickman-worship.png'
                         style='height: 6em; vertical-align: bottom; margin-top: 3em;'
                     />
                     <img
-                        src='python-logo-3d.png'
+                        src='images/python-logo-3d.png'
                         style='
                             vertical-align: top;
                             height: 7.5em;
@@ -255,11 +255,11 @@
             <div style='display: flex; justify-content: center;'>
                 <div style='flex: none'>
                     <img
-                        src='stickman-worship.png'
+                        src='images/stickman-worship.png'
                         style='height: 6em; vertical-align: bottom; margin-top: 3em;'
                     />
                     <img
-                        src='python-logo-3d.png'
+                        src='images/python-logo-3d.png'
                         style='
                             vertical-align: top;
                             height: 7.5em;
@@ -303,7 +303,7 @@
                 <div class='fragment' data-fragment-index='1'>&nbsp;─▶&nbsp;</div>
                 <div class='fragment' data-fragment-index='1'>
                     <img
-                        data-src='python-logo-3d.png'
+                        data-src='images/python-logo-3d.png'
                         style='width: 100%; margin-bottom: -1em; grid-row: 1;'
                     />
                 </div>
@@ -426,7 +426,7 @@
             <object
                 data-id='fluxograma'
                 type='image/svg+xml'
-                data='exemplo-senha-fluxograma.svg'
+                data='images/exemplo-senha-fluxograma.svg'
                 style='height: 10em; margin-left: 1ex;'
             ></object>
             <p>Fluxograma</p>
@@ -460,7 +460,7 @@
                 <object
                     data-id='fluxograma'
                     type='image/svg+xml'
-                    data='exemplo-senha-fluxograma.svg'
+                    data='images/exemplo-senha-fluxograma.svg'
                     style='height: 10em; flex: 1; margin-left: 1ex;'
                 ></object>
             </div>
@@ -499,7 +499,7 @@
                 <object
                     data-id='fluxograma-equivalente'
                     type='image/svg+xml'
-                    data='exemplo-senha-fluxograma-equivalente-codigo.svg'
+                    data='images/exemplo-senha-fluxograma-equivalente-codigo.svg'
                     style='flex: 1; margin-left: 1ex; height: 12em; font-size: 1em;'
                 ></object>
                 <script>(async function() {
@@ -589,7 +589,7 @@
                 programação <strong>requer</strong> o uso estritamente correto
                 de uma sintaxe para que ambas as partes
                 (🤓 e
-                 <img data-src='python-logo.svg'
+                 <img data-src='images/python-logo.svg'
                       alt='interpretador Python'
                       style='height: 1em; display: inline; margin: 0;
                              vertical-align: middle' />)
