slides: reword integer division

--- a/slides/index.html
+++ b/slides/index.html
@@ -908,7 +908,7 @@
         </template>
         <template data-reuse='operations-numbers'>
             <template data-tag='operation-title'>
-                <code>//</code> Divisão inteira de um número por outro: a parte fracionária é descartada
+                <code>//</code> Divisão inteira de um número por outro
             </template>
             <template data-selector='.python-repl' data-replace-content><!--
             >>> 5 // 2
